fixing blurry in safari

--- a/assets/scss/components/navbar-v2.scss
+++ b/assets/scss/components/navbar-v2.scss
@@ -106,10 +106,10 @@
     padding-top: 15px;
 
     .img-menu-icon {
-        width: 10px;
-        max-width: 10px;
-        margin-right: 3px;
-        max-height: 13px;
+      backface-visibility: hidden;
+      transform: translateZ(0);
+      -webkit-font-smoothing: subpixel-antialiased;
+      transform: scale3d(1.0, 1.0, 1.0);
     }
 }
 .btn-outline-secondary {
